[package]
name = "spider"
version = "0.1.0"
edition = "2021"
default-run = "spider"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dht_chord = { git = "https://github.com/Ocelmot/chord_dht" }

tokio = { version = "1", features = ["full"] }

serde_json = "1.0.73"
serde = { version = "1.0.132", features = ["derive"] }


tracing = "0.1"
tracing-subscriber = "0.3.14"
tracing-appender = "0.2.2"