[package]
name = "spider_link"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dht_chord = { git = "https://github.com/Ocelmot/chord_dht" }

tokio = { version = "1", features = ["full"] }

tracing = "0.1"

serde = { version = "1.0.132", features = ["derive", "rc"] }
serde_json = "1.0.73"

num-bigint = "0.4.3"
rsa = "0.6.1"
chacha20poly1305 = "0.10.0"
rand = "0.8.5"